--- a/client/src/components/headers/Header.css
+++ b/client/src/components/headers/Header.css
@@ -14,7 +14,7 @@ header a {
 }
 header ul li {
   display: inline-block;
-  padding: 10px 20px;
+  padding: 10px 10px;
   opacity: 0.7;
 }
 header ul li:hover {
@@ -41,7 +41,7 @@ header ul li img {
   background: #ffffff;
   width: 100%;
   width: calc(100% + 30px);
-  top: 60px;
+  top: 50px;
   display: none;
 }
 .drop-nav .dropdown li {
@@ -49,4 +49,20 @@ header ul li img {
 }
 .drop-nav:hover .dropdown {
   display: block;
+}
+
+.cart-icon {
+  position: relative;
+  margin-right: 20px;
+  margin-left: 10px;
+}
+.cart-icon span {
+  background: crimson;
+  border-radius: 20px;
+  color: white;
+  position: absolute;
+  top: -15px;
+  right: -20px;
+  padding: 5px 7px;
+  font-size: 10px;
 }
