--- a/client/src/components/mainpages/createProduct/createProduct.css
+++ b/client/src/components/mainpages/createProduct/createProduct.css
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
+  margin-top: 15rem;
 }
 .upload {
   max-width: 450px;
@@ -85,4 +86,45 @@ textarea {
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 700;
+}
+
+.newProduct {
+  flex: 4;
+  margin-left: 100px;
+}
+
+.addProductForm {
+  margin-top: 10px;
+}
+
+.addProductItem {
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.addProductItem > label {
+  color: gray;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.addProductItem > input {
+  padding: 10px;
+}
+
+.addProductItem > select {
+  padding: 10px;
+}
+
+.addProductButton {
+  margin-top: 10px;
+  padding: 7px 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: darkblue;
+  color: white;
+  font-weight: 600;
+  cursor: pointer;
 }
