--- a/client/src/components/mainpages/createProduct/createProduct.css
+++ b/client/src/components/mainpages/createProduct/createProduct.css
@@ -4,7 +4,8 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  margin-top: 15rem;
+  margin-top: 19rem;
+  margin-bottom: 7rem;
 }
 .upload {
   max-width: 450px;
@@ -72,8 +73,12 @@
   width: 100%;
   margin: 15px 0;
 }
-.create_product form input,
-textarea {
+.create_product form input {
+  width: 100%;
+  height: 30px;
+  padding: 0 5px;
+}
+.create_product form textarea {
   width: 100%;
   min-height: 40px;
   padding: 0 5px;
